--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,6 @@
     <string name="adapter_scan_info">Scanning for USB I2C adapters…</string>
     <string name="device_scan_info">Scanning I2C address: 0x%1$02x</string>
     <string name="unknown_device">Unknown Device</string>
+    <string name="empty_adapter_list">No USB I2C adapters found\n(pull to refresh)</string>
+    <string name="empty_device_list">No I2C devices found\n(pull to refresh)</string>
 </resources>
