--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="unknown_device">Unknown device</string>
     <string name="empty_adapter_list">No USB I2C adapters found\n(pull to refresh)</string>
     <string name="empty_device_list">No I2C devices found\n(pull to refresh)</string>
+    <string name="permission_denied">Permission denied</string>
 </resources>
